--- a/src/main/resources/application-uat.properties
+++ b/src/main/resources/application-uat.properties
@@ -5,3 +5,10 @@ info.project.team=Great Learning
 info.project.instructor=Great Learning Faculty
 management.endpoints.web.exposure.include=info, metrics, health
 management.endpoints.web.base-path=/app/health
+
+#Enabling H2 console
+spring.h2.console.enable=true
+spring.datasource.url=jdbc:h2:mem:librayUatDB
+soring.datasource.driverClassName=org.h2.Driver
+spring.datasource.userName=uat
+spring.datasource.password=1234
